# pulseaudio-chromecast-sink

./: .clang-format  .gitmodules  CMakeLists.txt  COPYING.txt  README.md  format-all.sh  pre-commit.py  pre-commit.sh
chromecast-receiver/: index.html  script.js
doc/: Chromecast receiver app protocol.md
proto/: CMakeLists.txt  cast_channel.proto
src/: asio_avahi_poll.cpp  asio_avahi_poll.h  asio_pa_mainloop_api.cpp  asio_pa_mainloop_api.h  audio_sinks_manager.cpp  audio_sinks_manager.h  chromecast_channel.cpp  chromecast_channel.h  chromecast_channel_impl.h  chromecast_connection.cpp  chromecast_connection.h  chromecast_finder.cpp  chromecast_finder.h  chromecasts_manager.cpp  chromecasts_manager.h  defer.cpp  defer.h  generic_loop_api.h  generic_loop_api_impl.h  main.cpp  network_address.cpp  network_address.h  pa_test.cpp  util.cpp  util.h  websocket_broadcaster.cpp  websocket_broadcaster.h
